  be more informative for `ocamlrun -I` and support `--` for terminating options
  parsing.
  (David Allsopp, review by Xavier Leroy)

- #10101: Add -help/--help option to ocamlrun.
  (David Allsopp, review by Xavier Leroy)

- #10136: Minor clean-ups in runtime/io.c and runtime/caml/io.h
  (Xavier Leroy, review by David Allsopp and Guillaume Munch-Maccagnoni)

- #10188, #10213: Switch the default allocation policy to best-fit and adjust
  the default overhead parameter accordingly.
  (Damien Doligez, review by Josh Berdine and Xavier Leroy)

- #10212: Simplify and improve the Windows-specific code that connects
  to the debugger via a socket.
  (Antonin Décimo, review by Xavier Leroy)

### Code generation and optimizations:

- #9876: do not cache the young_limit GC variable in a processor register.
  This affects the ARM64, PowerPC and RISC-V ports, making signal handling
  and minor GC triggers more reliable, at the cost of a small slowdown.
  (Xavier Leroy, review by Nicolás Ojeda Bär)

- #9937: improvements in ARM64 code generation (constants, sign extensions)
  (Xavier Leroy, review by Stephen Dolan)

- #10228: Better code-generation for inlined comparisons
  (Stephen Dolan, review by Alain Frisch and Xavier Leroy)

### Standard library:

- #9533: Added String.starts_with and String.ends_with.
  (Bernhard Schommer, review by Daniel Bünzli, Gabriel Scherer and
  Alain Frisch)

- #9582: Add Array.{find_opt,find_map,split,combine}.
  (Nicolás Ojeda Bär, review by Daniel Bünzli and Gabriel Scherer)

* #10169: Use capitalized module names in the Standard Library prefixing scheme
  to match Dune, e.g. Stdlib__String instead of Stdlib__string. This is a
  breaking change only to code which attempted to use the internal names before.
  The Standard Library generated by the Dune rules is now equivalent to the main
  build (the Dune rules still do not generate a distributable compiler).
  (David Allsopp and Mark Shinwell, review by Gabriel Scherer)

### Other libraries:
